<resources>
    <string name="app_name">Latihan2-BloodShare-IF1-10118025</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="doesn_t_have_account">doesn\'t have account ?</string>
</resources>